--- a/pages/循环链表代码.md
+++ b/pages/循环链表代码.md
@@ -1,2 +1,193 @@
 - ```go
+  package main
+  
+  import (
+  	"errors"
+  	"fmt"
+  )
+  
+  type Node struct {
+  	val  int
+  	next *Node
+  }
+  
+  type CircularLinkedList struct {
+  	head, tail *Node
+  	len        int
+  }
+  
+  func NewCircularLinkedList() *CircularLinkedList {
+  	return &CircularLinkedList{}
+  }
+  
+  func (c *CircularLinkedList) Insert(val int) {
+  	n := Node{val: val}
+  
+  	if c.len == 0 {
+  		c.head = &n
+  		c.len++
+  		return
+  	}
+  	ptr := c.head
+  	for i := 0; i < c.len; i++ {
+  		if i == c.len-1 {
+  			n.next = c.head
+  			ptr.next = &n
+  			c.tail = &n
+  			c.len++
+  			return
+  		}
+  		ptr = ptr.next
+  	}
+  }
+  
+  func (c *CircularLinkedList) GetAt(pos int) *Node {
+  	ptr := c.head
+  	if pos < 0 {
+  		return ptr
+  	}
+  	if pos > (c.len - 1) {
+  		return nil
+  	}
+  	for i := 0; i < pos; i++ {
+  		ptr = ptr.next
+  	}
+  	return ptr
+  }
+  
+  func (c *CircularLinkedList) InsertAt(pos int, val int) {
+  	newNode := Node{val: val}
+  	if pos < 0 {
+  		return
+  	}
+  	if pos == 0 {
+  		newNode.next = c.head
+  		c.head = &newNode
+  		c.tail.next = &newNode
+  		c.len++
+  		return
+  	}
+  	if pos > c.len {
+  		return
+  	}
+  	n := c.GetAt(pos)
+  	if n == nil {
+  		newNode.next = c.head
+  		c.tail = &newNode
+  	} else {
+  		newNode.next = n
+  	}
+  	prevNode := c.GetAt(pos - 1)
+  	prevNode.next = &newNode
+  	c.len++
+  }
+  
+  func (c *CircularLinkedList) Search(val int) int {
+  	ptr := c.head
+  	for i := 0; i < c.len; i++ {
+  		if ptr.val == val {
+  			return i
+  		}
+  		ptr = ptr.next
+  	}
+  	return -1
+  }
+  
+  func (c *CircularLinkedList) DeleteAt(pos int) error {
+  	if pos < 0 {
+  		fmt.Println("position can not be negative")
+  		return errors.New("position can not be negative")
+  	}
+  	if c.len == 0 {
+  		fmt.Println("No nodes in list")
+  		return errors.New("No nodes in list")
+  	}
+  	if pos > c.len-1 {
+  		fmt.Println("Position exceeds length")
+  		return errors.New("Position exceeds length")
+  	}
+  
+  	if pos == 0 {
+  		c.head = c.GetAt(pos + 1)
+  		c.tail.next = c.head
+  		c.len--
+  		return nil
+  	}
+  	prevNode := c.GetAt(pos - 1)
+  	if prevNode == nil {
+  		fmt.Println("Node not found")
+  		return errors.New("Node not found")
+  	}
+  	currNode := c.GetAt(pos)
+  	if currNode.next == c.head {
+  		c.tail = prevNode
+  	}
+  	prevNode.next = currNode.next
+  	c.len--
+  	return nil
+  }
+  
+  func (c *CircularLinkedList) DeleteVal(val int) error {
+  	ptr := c.head
+  	if c.len == 0 {
+  		fmt.Println("List is empty")
+  		return errors.New("List is empty")
+  	}
+  	for i := 0; i < c.len; i++ {
+  		if ptr.val == val {
+  			if i > 0 {
+  				prevNode := c.GetAt(i - 1)
+  				currNode := c.GetAt(i)
+  				if currNode.next == c.head {
+  					c.tail = prevNode
+  				}
+  				prevNode.next = c.GetAt(i).next
+  			} else {
+  				c.head = ptr.next
+  				c.tail.next = c.head
+  			}
+  			c.len--
+  			return nil
+  		}
+  		ptr = ptr.next
+  	}
+  	fmt.Println("Node not found")
+  	return errors.New("Node not found")
+  }
+  
+  func (c *CircularLinkedList) Print() {
+  	if c.len == 0 {
+  		fmt.Println("No nodes in list")
+  	}
+  	ptr := c.head
+  	for i := 0; i < c.len; i++ {
+  		fmt.Printf("Node: %+v %p \n", ptr, ptr)
+  		ptr = ptr.next
+  	}
+  }
+  
+  func (c *CircularLinkedList) LoopPrint(loopNumber int) {
+  	if c.len == 0 {
+  		fmt.Println("No nodes in list")
+  	}
+  	ptr := c.head
+  	for i := 0; i < c.len*loopNumber; i++ {
+  		fmt.Printf("Node: %+v %p \n", ptr, ptr)
+  		ptr = ptr.next
+  	}
+  }
+  
+  func main() {
+  	c := NewCircularLinkedList()
+  	c.Insert(3)
+  	c.Insert(7)
+  	c.Insert(2)
+  	c.Insert(9)
+  	c.InsertAt(4, 10)
+  	c.Insert(11)
+  	c.DeleteVal(11)
+  	c.LoopPrint(2)
+  	fmt.Printf("head:%p tail:%p len:%v \n", c.head, c.tail, c.len)
+  }
+  
   ```
