--- a/journals/2022_03_19.md
+++ b/journals/2022_03_19.md
@@ -2,5 +2,5 @@
 - [[数据结构]]
 	- [[数据结构/树]]
 - # 杂谈
-- 今天在推上看到了一本建筑相关的书《 [[A Pattern Language]] 》Christopher Alexander，据了解该书也是后面 [[面向对象]] 编程思想的基础。Will Wright也是受其启发设计了游戏《模拟城市》和《模拟人生》。这本书的中文名叫《 [[建筑模式语言]] 》，但在豆瓣搜的时候还发现该作者另一本书 《 [[The Timeless Way of Building]] 》中文名叫 《 [[建筑的永恒之道]] 》也很受欢迎，大概看了一下，如果是软件工程师我更推荐 《[[建筑模式语言]]》这本书，《 [[建筑的永恒之道]] 》这本书对于非建筑领域可能会看的比较迷糊。另外该作者在软件领域比它在建筑行业更知名，但可惜该作者在今年的3月17日去世。
+- 今天在推上看到了一本建筑相关的书《 [[A Pattern Language]] 》Christopher Alexander，据了解该书也是后面 [[面向对象]] 编程思想的基础。Will Wright也是受其启发设计了游戏《模拟城市》和《模拟人生》。这本书的中文名叫《 [[建筑模式语言]] 》，但在豆瓣搜的时候还发现该作者另一本书 《 [[The Timeless Way of Building]] 》中文名叫 《 [[建筑的永恒之道]] 》也很受欢迎，大概看了一下，如果是软件工程师我更推荐 《[[建筑模式语言]]》这本书，《 [[建筑的永恒之道]] 》这本书对于非建筑领域可能会看的比较迷糊。另外该作者在软件领域比它在建筑行业更知名，可惜该作者在今年的3月17日去世。
   https://mp.weixin.qq.com/s/WkPqw-g3tq2d4FBDkKpEvw
