--- a/pages/数据结构.md
+++ b/pages/数据结构.md
@@ -14,4 +14,4 @@ alias:: Data Structure
 		- [[Data Structure/Hash Tables]]
 	- Non Linear
 		- [[Data Structure/Trees]]
-		- Graphs
+		- [[Data Structure/Graphs]]
