--- a/pages/算法.md
+++ b/pages/算法.md
@@ -3,4 +3,6 @@ alias:: Algorithms
 - [[Algorithms/Linear Search]]
 - [[Algorithms/Binary Search]]
 - [[Algorithms/Sorting]]
+- [[Algorithms/Tree Traversal]]
+-
 -
