--- a/journals/2022_03_31.md
+++ b/journals/2022_03_31.md
@@ -1,8 +1,10 @@
 - # 代码
 	- 完善框架
 		- TODO 集成 cache
+			- DONE Redis 集成
 		- TODO 集成 计划任务
-		- TODO  继承队列
+		- TODO  集成队列
 - # 学习
-	- google 的 [[wire]] 项目
+	- TODO google 的 [[wire]] 项目
 	  看能不能应用到自己的框架中
+	-
