--- a/pages/关于我.md
+++ b/pages/关于我.md
@@ -1,1 +1,82 @@
+- ## 联系方式
+	- Email：ganymedenil@gmail.com
+	- 微信号：ganymede-nil（添加请注明）
 -
+- ## 个人信息
+	- ⾦弘扬/男/1995
+	- 专科/义乌⼯商学院建筑⼯程
+	- ⼯作年限：5年
+	- 技术博客：https://www.ganymedenil.com/
+	- Github：https://github.com/GanymedeNil
+	- 期望职位：PHP/Go资深⼯程师，应⽤架构师
+	- 期望薪资：税前⽉薪30k~35k
+	- 期望城市：北京
+-
+- ## 工作经历
+	- ### 北京世纪好未来教育科技有限公司 （ 2016年11月 ～ 2022 年 2月）
+	  collapsed:: true
+		- #### 轻舟事业部（2020年6月～2022年2月）
+			- CRM系统（后端负责人）
+			  collapsed:: true
+				- 内部第二代CRM系统服役3年，因为没有良好的设计导致堆积的功能以无法支持业务需求，即重构。
+				- 1、与项目经理配合梳理业务大图以及原有功能设计与当前业务流程，并整理成系统文档
+				- 2、整个迁移周期长达1年，期间对于业务提供的反馈进行系统调整与支持
+				- 3、收集用户轨迹数据，与上下游业务系统探讨合适的收集方式，最终确定基于Laravel 的 Events 事件埋点以及通过监听相关业务数据库 binlog 方式，然后通过 Kafka 汇聚到数仓进行轨迹绘制
+				- 4、SOP 任务模块，为了达成更高的自由度，借鉴了低代码系统设计模式，底层事件采用独立模块化开发，然后基于表达式语言 (EL)把触发和完成动作完全暴露给使用方，以达成只需要在页面层操作即可完成复杂的触发机制编写
+				- 5、集成企业微信服务全功能接入
+				- 从业至今对个人而言最为成功的一次业务系统重构，包括在系统整体设计到与上下游用户的默契合作。该系统也被被部门评为优秀系统。
+			- 考研平台化基础服务系统（后端负责人）
+			  collapsed:: true
+				- 为满足考研平台获取省份、院校专业搭建高可用系统。
+				- 1、系统基于 Hyperf 框架开发
+				- 2、使用 Redis 存储省份与院校专业信息
+				- 3、使用 ES 存储院校与专业数据以方便模糊搜索
+				- 4、通过 ORM event 来触发更新 Redis 缓存以及 ES 数据
+				- 获取数据接口速度低于30毫秒，服务可用性高于99.99%。
+		- #### 大学及职业教育事业部中台（2019年 3月 ～ 2020年6月）
+			- 权限系统（后端负责人）
+			  collapsed:: true
+				- 作为TOB基础服务之一，主要解决对外服务的多机构权限管理，以及接口权限控制功能。
+				- 1、基于 Go-framework-base 内部框架开发，Casbin作为权限缓存，并配置Casbin接入etcd达成分布式权限缓存。
+				- 2、为方便内部各系统接入封装 PHP sdk、Go sdk，并撰写了相应接入文档
+				- 3、协助前端开发通用服务开发框架，通过配置即可直接使用权限系统无需二次开发
+				- 4、内部推广宣讲以及支持与维护工作
+				- 权限校验接口速度低于10毫秒，服务可用性高于99.99%，单核压测8000qps。
+			- PPT转图片服务（后端负责人）
+			  collapsed:: true
+				- 为了满足 PPT 预览以及直播PPT播放涂鸦服务。
+				- 1、使用 kafka 作为转换队列与内部网盘服务接入
+				- 2、基于 Go 开发转换服务，调用 LibreOﬃce 转为 PDF、PDF再转为对应的图片，并上传到静态文件系统
+				- 3、将转换信息通过 kafka 推送到内部网盘业务
+				- 1.0 版本的PDF 转图片使用了 ImageMagick，但发现每页转换速度基本在10秒以上，分析了它的转换原理后，重新提取了关键转换功能后编译，速度提升到1秒每页
+		- #### 考满分（2016年11月 ～ 2019年3月）
+			- 静态文件系统（后端负责人）
+			  collapsed:: true
+				- 原有的静态文件存储非常分散——项目目录、自建静态文件系统以及不同项目上传到多个云平台。时常因为静态文件出现丢失或者自建服务器被WebShell而需要花费人力与时间去查找问题与修复。
+				- 1、确定两家云厂商作为主和备，并配置相互回源
+				- 2、基于Go开发了多源迁移工具，迁移在本地以及各个云平台的文件到指定厂商，超5TB数据
+				- 3、基于Lumen 开发认证上传的调度系统对接云厂商RAM资源访问从厂商层级直接限制静态文件的操作权限以及调度多云厂商的上传接口
+				- 4、为方便内部各系统接入封装了 PHP sdk、Go sdk，并撰写了相应的使用文档
+				- 5、内部推广宣讲以及支持与维护工作
+				- 日均调度接口调用峰值超100万+，服务可用性高于99.99%。直接解决被黑的风险，并且文件上传服务接入更加便捷。
+			- 题库系统（后端开发）
+			  collapsed:: true
+				- 首次尝试基于Go重构业务系统，技术选型Gin、Gorm、go-redis。搭建了内部第一个Go基础框架 Go-framework-base，并服务了多个业务系统。
+				- 原有题库系统基于 zend framework 1.2 开发，并且该项目因为超过3年的业务功能堆砌已经臃肿不堪，最大接口响应时间超过10秒，经过业务代码重新梳理和代码的重构，并通过Go的灵活并发功能以及Redis缓存的支持，接口响应时间普遍降到50毫秒以内，对于批量数据获取接口也降到3秒以内。
+				-
+- ## 开源项⽬和作品
+- ### 开源项⽬
+- [srt2fcpxml](https://github.com/GanymedeNil/srt2fcpxml)：使⽤ Go 语⾔开发的 srt 字幕⽂件转为ﬁnal cut pro 字幕⽂件(fcpxml)。
+- [php_conf_agent](https://github.com/go-microservices/php_conf_agent)：基于 Kubernetes 的 Sidecar 部署模式，使⽤ Go 语⾔开发的 PHP 配置更新服 务。单个agent⽀持多项⽬，多 namespace。已被 Apollo 官⽅收录为第三⽅推荐组件。
+- ### 技术⽂章
+	- [Go 基础库系列⽂章](https://www.ganymedenil.com/tags/go/)
+	- [PHP 7:真实世界的应⽤开发（中⽂翻译）](https://github.com/AnyStudy/PHP-7-Real-World-Application-Development)
+- ### 技术分享
+	- [分布式事务](https://github.com/AnyStudy/ppt-share/blob/master/%E5%88%86%E5%B8%83%E5%BC%8F%E4%BA%8B%E5%8A%A1.pdf)
+- ## 技能清单
+- 以下均为我熟练使⽤的技能
+- Web开发：PHP/Go
+- Web框架：Gin/Hyperf/Lavarel/Lumen
+- 数据库相关：MySQL/Redis/Elasticsearch/Kafka
+- 版本管理和⾃动化部署⼯具：Git/Composer/k8s/Docker
+- 云和开放平台：/阿⾥云/腾讯云/微信应⽤开发/企业微信开发
