--- a/pages/关于我.md
+++ b/pages/关于我.md
@@ -14,9 +14,8 @@
 -
 - ## 工作经历
 	- ### 北京世纪好未来教育科技有限公司 （ 2016年11月 ～ 2022 年 2月）
-	  collapsed:: true
 		- #### 轻舟事业部（2020年6月～2022年2月）
-			- CRM系统（后端负责人）
+			- SCRM系统（后端负责人）
 			  collapsed:: true
 				- 内部第二代CRM系统服役3年，因为没有良好的设计导致堆积的功能以无法支持业务需求，即重构。
 				- 1、与项目经理配合梳理业务大图以及原有功能设计与当前业务流程，并整理成系统文档
