--- a/pages/关于我.md
+++ b/pages/关于我.md
@@ -16,8 +16,7 @@
 	- ### 北京世纪好未来教育科技有限公司 （ 2016年11月 ～ 2022 年 2月）
 		- #### 轻舟事业部（2020年6月～2022年2月）
 			- SCRM系统（后端负责人）
-			  collapsed:: true
-				- 内部第二代CRM系统服役3年，因为没有良好的设计导致堆积的功能以无法支持业务需求，即重构。
+				- 内部第二代SCRM系统服役3年，因为没有良好的设计导致堆积的功能以无法支持业务需求，即重构。
 				- 1、与项目经理配合梳理业务大图以及原有功能设计与当前业务流程，并整理成系统文档
 				- 2、整个迁移周期长达1年，期间对于业务提供的反馈进行系统调整与支持
 				- 3、收集用户轨迹数据，与上下游业务系统探讨合适的收集方式，最终确定基于Laravel 的 Events 事件埋点以及通过监听相关业务数据库 binlog 方式，然后通过 Kafka 汇聚到数仓进行轨迹绘制
