--- a/pages/关于我.md
+++ b/pages/关于我.md
@@ -7,9 +7,9 @@
 	- 专科/义乌⼯商学院建筑⼯程
 	- ⼯作年限：5年
 	- 技术博客：https://www.ganymedenil.com/
+	- 知识图谱：https://ganymedenil.github.io/study
 	- Github：https://github.com/GanymedeNil
 	- 期望职位：PHP/Go资深⼯程师，应⽤架构师
-	- 期望薪资：税前⽉薪30k~35k
 	- 期望城市：北京
 -
 - ## 工作经历
@@ -33,7 +33,6 @@
 				- 获取数据接口速度低于30毫秒，服务可用性高于99.99%。
 		- #### 大学及职业教育事业部中台（2019年 3月 ～ 2020年6月）
 			- 权限系统（后端负责人）
-			  collapsed:: true
 				- 作为TOB基础服务之一，主要解决对外服务的多机构权限管理，以及接口权限控制功能。
 				- 1、基于 Go-framework-base 内部框架开发，Casbin作为权限缓存，并配置Casbin接入etcd达成分布式权限缓存。
 				- 2、为方便内部各系统接入封装 PHP sdk、Go sdk，并撰写了相应接入文档
@@ -41,7 +40,6 @@
 				- 4、内部推广宣讲以及支持与维护工作
 				- 权限校验接口速度低于10毫秒，服务可用性高于99.99%，单核压测8000qps。
 			- PPT转图片服务（后端负责人）
-			  collapsed:: true
 				- 为了满足 PPT 预览以及直播PPT播放涂鸦服务。
 				- 1、使用 kafka 作为转换队列与内部网盘服务接入
 				- 2、基于 Go 开发转换服务，调用 LibreOﬃce 转为 PDF、PDF再转为对应的图片，并上传到静态文件系统
@@ -49,7 +47,6 @@
 				- 1.0 版本的PDF 转图片使用了 ImageMagick，但发现每页转换速度基本在10秒以上，分析了它的转换原理后，重新提取了关键转换功能后编译，速度提升到1秒每页
 		- #### 考满分（2016年11月 ～ 2019年3月）
 			- 静态文件系统（后端负责人）
-			  collapsed:: true
 				- 原有的静态文件存储非常分散——项目目录、自建静态文件系统以及不同项目上传到多个云平台。时常因为静态文件出现丢失或者自建服务器被WebShell而需要花费人力与时间去查找问题与修复。
 				- 1、确定两家云厂商作为主和备，并配置相互回源
 				- 2、基于Go开发了多源迁移工具，迁移在本地以及各个云平台的文件到指定厂商，超5TB数据
@@ -58,7 +55,6 @@
 				- 5、内部推广宣讲以及支持与维护工作
 				- 日均调度接口调用峰值超100万+，服务可用性高于99.99%。直接解决被黑的风险，并且文件上传服务接入更加便捷。
 			- 题库系统（后端开发）
-			  collapsed:: true
 				- 首次尝试基于Go重构业务系统，技术选型Gin、Gorm、go-redis。搭建了内部第一个Go基础框架 Go-framework-base，并服务了多个业务系统。
 				- 原有题库系统基于 zend framework 1.2 开发，并且该项目因为超过3年的业务功能堆砌已经臃肿不堪，最大接口响应时间超过10秒，经过业务代码重新梳理和代码的重构，并通过Go的灵活并发功能以及Redis缓存的支持，接口响应时间普遍降到50毫秒以内，对于批量数据获取接口也降到3秒以内。
 				-
